@@ -5,6 +5,7 @@
 %Document what UTF8 does w.r.t @B in -split-bookmarks
 %Document CPDF_SHOW_EXT for image processing
 %Document "* 500pt" / "500pt *" in -scale-to-fit / -center-to-fit
+%Document -progress
 %\DocumentMetadata{lang=en, pdfversion=2.0, pdfstandard=ua-2, pdfstandard=a-4f, testphase={phase-III, title, table, math, firstaid}}
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
