@@ -4,6 +4,7 @@ New features:
 
 o CCITT and CCITTG4 encoders in -process-images
 o Detect and remove JavaScript
+o Show progress on long files
 
 Extended features:
 
